--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,4 @@
-.App {
-  text-align: center;
-}
-
+/*
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -14,8 +11,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #efefef;
+  min-height: 200vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -25,7 +22,7 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #fb6161;
 }
 
 @keyframes App-logo-spin {
@@ -35,4 +32,57 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+  const stylesMenu = {
+    display:'flex',
+    justifyContent: 'flex-end',
+    marginTop: 20,
+    paddingBottom: 10,
+  }
+
+*/
+
+
+.ant-layout-header {
+  background-color: #254e5c;
+}
+
+
+.ant-layout-footer {
+  background-color: '#254e5c';
+}
+
+
+.ant-layout-header {
+  height: 95px;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+}
+
+.ant-menu {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 10px;
+  padding-bottom: 10px;
+  border-bottom: solid 1px #888888;
+}
+
+.ant-layout-content {
+  padding-left: 50px;
+  padding-right: 50px;
+  min-height: 600px;
+}
+
+.ant-select, .ant-switch {
+  margin: 8px 0;
+}
+
+.ant-layout-footer {
+  margin-top: 80px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
 }
